# Sc2monsterbotNewupgread

./: .cursorignore  .cursorrules  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  3대_핵심기능_완전가이드.md  ADVANCED_FEATURES_GUIDE.md  ADVANCED_FEATURES_IMPLEMENTATION.md  AIARENA_GUIDE.md  CHAT_SPAM_ELIMINATION_REPORT.md  CLAUDE.md  CLEANUP_COMPLETION_REPORT.md  CLEANUP_REPORT_20260112.md  CODESPACES_MOBILE_GUIDE.md  COMPLETE_SYSTEM_GUIDE.md  FAST_INSPECTOR_QUICKSTART.md  FAST_INSPECTOR_README.md  FIREWALL_SETUP_GUIDE.md  GEMINI_CHAT_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  MOBILE_BUG_MONITORING_GUIDE.md  MOBILE_EXECUTION_GUIDE.md  MOBILE_MONITORING_README.md  MONITORING_CHECKLIST.md  MONITORING_GUIDE.md  MONITORING_ORGANIZATION_REPORT.md  MONSTERBOT_QUICKSTART.md  OPENCODE_INTEGRATION.md  PROJECT_STRUCTURE.md  QUICKSTART_VERTEX_AI.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  README_SELF_HEALING.md  REALTIME_BUG_MONITORING_GUIDE.md  REALTIME_MONITOR_GUIDE.md  SC2_INTEGRATION_GUIDE.md  SECURITY_CLEANUP.md  TRAINING_PREP_STATUS.md  (+39 more)
